Examined flux data for variation
Found that there is some (albeit small) variations in flux across cells.

--- a/notebooks/r/05_Embeddings/01_QUANTILE_UMAP.Rmd
+++ b/notebooks/r/05_Embeddings/01_QUANTILE_UMAP.Rmd
@@ -149,6 +149,7 @@ flux_data[is.na(flux_data)] = 0
 
 Let's visualize the Z-score distirbution.
 ```{r}
+library(reshape2)
 tmp = melt(flux_data)
 ggplot(tmp, aes(x=value)) + 
   geom_histogram(bins=100) + 
